syntax = "proto3";
package plates_recognition_grpc;

message CamInfo{
    string cam_id = 1;
    int64 timestamp = 2;
    bytes image = 3;// bytes of full image in PNG - format
    Detection detection = 4;
    repeated Point track = 5;
}

message Detection{
    int32 x_left = 1;
    int32 y_top = 2;
    int32 height = 3;
    int32 width = 4;
    int32 line_id = 5;
}

message Point{
    int32 x = 1;
    int32 y = 2;
}

message Response {
  string message = 1;
  string warning = 2;
  string error = 3;
}

message Config{
    string uid=1;
    repeated DetectionLine detection_lines=2;
}

message DetectionLine{
    int32 id = 1;
    Point begin = 2;
    Point end =3;
}

// STYolo - service for second and third yolo stages 
// in car number search cascade
service STYolo{
    rpc SendDetection(CamInfo) returns (Response){};
    rpc ConfigUpdater(stream Response) returns (stream Config){};
    rpc SetConfig(Config) returns (Response){}
}